# quantizer

./: LICENSE  README.md  pyproject.toml  quantizer.py  requirements.txt
examples/: adaptive_quantized_model.py
quantizer/: __init__.py  quantizer.py  utils.py
